tests/algorithms/x/Rust/web_programming/get_top_hn_posts.rs
// Generated by Mochi transpiler v0.10.63
use std::sync::atomic::{AtomicBool, AtomicI64, Ordering};
use std::time::{SystemTime, UNIX_EPOCH};
use std::process::Command;
static NOW_SEEDED: AtomicBool = AtomicBool::new(false);
static NOW_SEED: AtomicI64 = AtomicI64::new(0);
fn _now() -> i64 {
    if !NOW_SEEDED.load(Ordering::SeqCst) {
        if let Ok(s) = std::env::var("MOCHI_NOW_SEED") {
            if let Ok(v) = s.parse::<i64>() {
                NOW_SEED.store(v, Ordering::SeqCst);
                NOW_SEEDED.store(true, Ordering::SeqCst);
            }
        }
    }
    if NOW_SEEDED.load(Ordering::SeqCst) {
        let seed = (NOW_SEED.load(Ordering::SeqCst)*1664525 + 1013904223) % 2147483647;
        NOW_SEED.store(seed, Ordering::SeqCst);
        seed
    } else {
        SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_nanos() as i64
    }
}
fn _mem() -> i64 {
    if let Ok(mut f) = std::fs::File::open("/proc/self/statm") {
        let mut s = String::new();
        use std::io::Read;
        if f.read_to_string(&mut s).is_ok() {
            if let Some(rss) = s.split_whitespace().nth(1) {
                if let Ok(v) = rss.parse::<i64>() {
                    return v * 4096;
                }
            }
        }
    }
    0
}
fn _fetch(url: &str) -> String {
    let out = Command::new("curl").arg("-fsSL").arg(url).output().unwrap();
    let s = String::from_utf8_lossy(&out.stdout);
    if let Some(start) = s.find("\"title\"") {
        let rest = &s[start+8..];
        if let Some(begin) = rest.find('\"') {
            let rest2 = &rest[begin+1..];
            if let Some(end) = rest2.find('\"') {
                return rest2[..end].to_string();
            }
        }
    }
    String::new()
}
#[derive(Debug, Clone, Default)]
struct Story {
    title: String,
    url: String,
}
impl std::fmt::Display for Story {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"title\": \"{}\"", self.title)?;
        write!(f, ", ")?;
        write!(f, "\"url\": \"{}\"", self.url)?;
        write!(f, "}}")
    }
}

fn main() {
        let _start: i64 = _now();
    fn get_hackernews_story(mut story_id: i64) -> Story {
    let mut url: String = format!("{}{}", format!("{}{}", "https://hacker-news.firebaseio.com/v0/item/", story_id.to_string()), ".json?print=pretty").clone();
    let mut story: Story = _fetch(url);
    if (story.url.clone().as_str() == "") {
        story.url = format!("{}{}", "https://news.ycombinator.com/item?id=", story_id.to_string());
    }
    return story
};
    fn hackernews_top_stories(mut max_stories: i64) -> Vec<Story> {
    let mut url: String = String::from("https://hacker-news.firebaseio.com/v0/topstories.json?print=pretty");
    let mut ids: Vec<i64> = _fetch(url);
    ids = ids[0 as usize..max_stories as usize].to_vec();
    let mut stories: Vec<Story> = vec![];
    let mut i: i64 = 0;
    while (i < (ids.len() as i64)) {
        stories = { let mut _v = stories.clone(); _v.push(get_hackernews_story(ids[i as usize])); _v };
        i = (i + 1);
    }
    return stories
};
    fn hackernews_top_stories_as_markdown(mut max_stories: i64) -> String {
    let mut stories: Vec<Story> = hackernews_top_stories(max_stories);
    let mut output: String = String::from("").clone();
    let mut i: i64 = 0;
    while (i < (stories.len() as i64)) {
        let mut s: Story = stories[i as usize].clone();
        let mut line: String = format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "* [", s.title.clone()), "]("), s.url.clone()), ")").clone();
        if (i == 0) {
            output = line.clone();
        } else {
            output = format!("{}{}", format!("{}{}", output, "\n"), line);
        }
        i = (i + 1);
    }
    return output.clone()
};
    println!("{}", hackernews_top_stories_as_markdown(5));
    let _end: i64 = _now();
    let duration_us: i64 = ((_end - _start) / 1000);
    let memory_bytes: i64 = _mem();
    println!("{{\n  \"duration_us\": {},\n  \"memory_bytes\": {},\n  \"name\": \"{}\"\n}}", duration_us, memory_bytes, "main");

}
